fix filter alignment in ie and change icon global

--- a/assets/sass/pages/_product.scss
+++ b/assets/sass/pages/_product.scss
@@ -922,6 +922,23 @@ $product-container-padding: 0 50px;
 // Browser variations
 // >>>>>>>>>>>>>>>>>>>>>>>
 // IE
+.ie {
+    #narrow-by-list {
+        .m-filter-item-list {
+            li {
+                justify-content: flex-start;
+                padding-right: 30px;
+
+                span {
+                    position: absolute;
+                    z-index: zindex(lv1);
+                    top: 0;
+                    right: 0;
+                }
+            }
+        }
+    }
+}
 // Safari
 // Firefox
 
